feat(product): add product CRUD, featured, and recommendation APIs
- Add Product model
- Implement product controllers
- Add Cloudinary lib with .env config (name, key, secret)
- Add auth middleware (protectRoute, adminRoute)

--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ UPSTASH_REDIS_URL=rediss://default:AcOYAAIncDFlYzBiYmIxZjE2ZWY0ZmI0OGUwNzEyM2RiZ
 
 ACCESS_TOKEN_SECRET=your_access_token_secret
 REFRESH_TOKEN_SECRET=your_refresh_token_secret
+
+CLOUDINARY_NAME=dulzdd9w5
+CLOUDINARY_KEY=644676646753262
+CLOUDINARY_SECRET=Kt_Dq93ustb-Yk0DQrRodOB32I8
